@@ -5,6 +5,7 @@ xx Jan 2007: 0.3.6 Miek <miek@miek.nl>
    * gfunc.c: write remaining bytes when cutting of growing 
      files in a remote backup
    * Use DEcrypt and gUNzip when restoring
+   * Added (local) locking in the shell wrapper tools
 
 
 27 Dec 2006: 0.3.5 Miek <miek@miek.nl>
